--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
               _0x2816de["src"] = "";
 
-              if (loadRequestData.media.entity == "screencast") {
+              if (loadRequestData.media.entity == "screencast1") {
                 navigator.tcpPermission.requestPermission({remoteAddress: loadRequestData.media.contentUrl, remotePort: 5005}).then(
                     () => {
                         var mySocket = new TCPSocket(loadRequestData.media.contentUrl, 5005);
@@ -324,6 +324,13 @@
                   //_0x58ae90 = loadRequestData.media.contentUrl;
                   //_0x354e3a();
                   return null;
+              }
+
+              if (loadRequestData.media.entity == "screencast") {
+                document.getElementById("cast-player").style.display = "none";
+                _0x58ae90 = loadRequestData.media.contentUrl;
+                _0x354e3a();
+                return null;
               }
 
               if (loadRequestData.media.entity.startsWith("applemusic")) {
